--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <div id="map"></div>
+    <div id="root">
+      <div id="map"></div>
+    </div>
   </body>
 </html>
